RESOLVED FIXED93628
HTMLElement.classList cannot remove classnames with uppercase characters
https://bugs.webkit.org/show_bug.cgi?id=93628
Summary HTMLElement.classList cannot remove classnames with uppercase characters
Alexey Proskuryakov
Reported 2012-08-09 10:22:59 PDT
Created attachment 157480 [details] test case In certain circumstances, HTMLElement.classList has trouble with case sensitivity. See attached test case. What's interesting is that adding a class attribute to the <body> element in markup makes this test pass. <rdar://problem/12034524>
Attachments
test case (313 bytes, text/html)
2012-08-09 10:22 PDT, Alexey Proskuryakov
no flags
test case (298 bytes, text/html)
2012-08-09 10:46 PDT, Alexey Proskuryakov
no flags
Patch (6.16 KB, patch)
2012-08-09 17:09 PDT, Erik Arvidsson
no flags
Erik Arvidsson
Comment 1 2012-08-09 10:30:06 PDT
This is quirks mode but it should still work.
Alexey Proskuryakov
Comment 2 2012-08-09 10:46:21 PDT
Created attachment 157488 [details] test case Yeah, re-uploading the test case without an incorrect doctype to avoid future confusion.
Erik Arvidsson
Comment 3 2012-08-09 15:00:05 PDT
One more data point. This does not happen on a disconnected DIV element.
Erik Arvidsson
Comment 4 2012-08-09 17:09:50 PDT
WebKit Review Bot
Comment 5 2012-08-09 19:26:51 PDT
Comment on attachment 157588 [details] Patch Clearing flags on attachment: 157588 Committed r125239: <http://trac.webkit.org/changeset/125239>
WebKit Review Bot
Comment 6 2012-08-09 19:26:54 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2012-11-08 12:44:42 PST
This has caused a regression, bug 101627.
Note You need to log in before you can comment on or make changes to this bug.